Including header site title

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,2 +1,6 @@
-<header class="header">
+<header class="header noprint">
+  <div class="info">
+    <img src="{{ '/assets/img/about.png' | relative_url }}" alt="">
+    <h1 class="site-title"><a class="page-link" rel="author" href="{{ '/' | base_url }}">{{ site.title | escape }}:\</a></h1>
+  </div>
 </header>
