Adding content structure and style

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,4 +3,8 @@
     <img src="{{ '/assets/img/about.png' | relative_url }}" alt="">
     <h1 class="site-title"><a class="page-link" rel="author" href="{{ '/' | base_url }}">{{ site.title | escape }}:\</a></h1>
   </div>
+
+  <nav class="menu">
+
+  </nav>
 </header>
