--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,8 +8,24 @@
   {%- include header.html -%}
 
   <main class="page-content" aria-label="Content">
-    {{ content }}
+    <div class="windows-div">
+      <div class="windows">
+        <aside class="folders">
+          <div class="window-content">
+            {%- include aside.html -%}
+          </div>
+        </aside>
+        <div class="content">
+          <div class="window-content">
+            {{ content }}
+          </div>
+        </div>
+      </div>
+    </div>
+
   </main>
+
+
 
   {%- include footer.html -%}
 
