--- a/_sass/style/_layout.scss
+++ b/_sass/style/_layout.scss
@@ -1,3 +1,23 @@
+// layout
+html {
+  height: 100%;
+}
+body {
+  display: flex;
+  flex-flow: column;
+  height: 100%;
+}
+.header {
+  flex-grow: 0;
+  flex-shrink: 1;
+  flex-basis: auto;
+}
+.page-content {
+  flex-grow: 1;
+  flex-shrink: 1;
+  flex-basis: auto;
+}
+
 // Header
 .header {
   background-color: $grey-color;
@@ -28,3 +48,53 @@
     }
   }
 }
+
+// content
+.windows-div {
+  height: 100%;
+}
+.windows {
+  background-color: $grey-color;
+  padding: 5px;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  .folders {
+    min-width: calc(#{$spacing-unit} * 10);
+    margin-right: 5px;
+  }
+  .content {
+    margin-left: 5px;
+    width: 100%;
+  }
+  .folders,
+  .content {
+    position: relative;
+    background-color: $light-color;
+    border-top: $border-dark;
+    border-left: $border-dark;
+    border-bottom: $border-light;
+    border-right: $border-light;
+    .window-content {
+      height: 100%;
+      width: 100%;
+      padding: 5px;
+      border-top: $border-dark;
+      border-right: $border-dark-grey;
+      border-bottom: $border-dark-grey;
+      border-left: $border-dark;
+      position: absolute;
+      overflow: auto;
+    }
+  }
+  @include media-query($on-palm) {
+    .folders {
+      display: none;
+    }
+    .content {
+      margin-left: 0;
+    }
+  }
+}
+
+// footer
