--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -2,4 +2,29 @@
 layout: default
 ---
 
+{%- assign default_paths = site.pages | map: "path" -%}
+{%- assign page_paths = site.header_pages | default: default_paths -%}
+
+<ul class="presentation">
+  {%- if page_paths -%}
+  {%- for path in page_paths -%}
+  {%- assign my_page = site.pages | where: "path", path | first -%}
+  {%- if my_page.title -%}
+  {% unless my_page.exclude %}
+  <li class="article-item">
+    <a class="article-link" href="{{ my_page.url | relative_url }}">
+      <img class="article-img" src="{{ 'assets/img/folder.png' | relative_url }}" alt="">
+      <span class="article-title">{{ my_page.title | escape | capitalize }}</span>
+    </a>
+  </li>
+  {% endunless %}
+  {%- endif -%}
+  {%- endfor -%}
+  {%- endif -%}
+
+
+
+</ul>
+
+
 {{ content }}
